<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"

        app:srcCompat="@drawable/girl2"

        />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="260dp"
        android:layout_below="@id/iv_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorHint="#181223"
        android:hint="@string/name"
         />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_name"
        android:layout_alignStart="@id/et_name"
        android:layout_alignLeft="@id/et_name"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="-40dp"
        android:text="name"
        android:textSize="16sp" />



    <EditText
        android:id="@+id/et_reg_email"
        android:layout_width="260dp"
        android:layout_below="@id/et_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="#181223"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        />

    <TextView
        android:id="@+id/tv_reg_email"
        android:layout_width="59dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_reg_email"
        android:layout_alignStart="@id/et_name"
        android:layout_alignLeft="@id/et_name"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="-40dp"
        android:text="@string/email"
        android:textSize="16sp" />



    <EditText
        android:id="@+id/et_reg_password"
        android:layout_width="260dp"
        android:layout_below="@id/et_reg_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColorHint="#181223"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        />

    <TextView
        android:id="@+id/tv_reg_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_reg_password"
        android:layout_alignStart="@id/et_reg_password"
        android:layout_alignLeft="@id/et_reg_password"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="-40dp"
        android:text="@string/password"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_register"
        android:background="@drawable/button_rectangle_pink"

        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_below="@id/et_school"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"

        android:text="@string/register" />


    <EditText
        android:id="@+id/et_school"
        android:layout_width="260dp"
        android:layout_below="@id/et_reg_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorHint="#181223"
        android:hint="@string/school_name"
        />

    <TextView
        android:id="@+id/tv_school"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_school"
        android:layout_alignStart="@id/et_school"
        android:layout_alignLeft="@id/et_school"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="-40dp"
        android:text="@string/name_of_school"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_login_back"
        android:layout_width="wrap_content"
        android:layout_below="@id/btn_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:text="@string/back"
        android:layout_height="wrap_content"/>
</RelativeLayout>