<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/logo"
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/greatvibes_regular"
        android:gravity="center_horizontal"
        android:text="@string/student_planner"
        android:textSize="35sp" />

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="325dp"
        android:layout_height="181dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-80dp"
        android:src="@drawable/boy" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:id="@+id/txtLayoutEmailSignIn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:drawableLeft="@drawable/ic_action_name"
            android:ems="10"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="#181223"
            android:textColorHint="#181223" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:id="@+id/txtLayoutPasswordSignIn"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:drawableLeft="@drawable/ic_password"
            android:ems="10"
            android:hint="@string/enter_password"

            android:inputType="textPassword"
            android:textColor="#181223"
            android:textColorHint="#181223"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>
    <!--

    <EditText
        android:id="@+id/et_email"
        android:layout_width="250dp"
        android:textColor="#181223"
        android:drawableLeft="@drawable/ic_action_name"
        android:textColorHint="#181223"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/enter_password"
        android:textColor="#181223"
        android:drawableLeft="@drawable/ic_password"
        android:textColorHint="#181223"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/et_email"
        android:layout_below="@id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@id/et_email"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword" />
        -->

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button_rectangle_pink"
        android:text="@string/login"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="6dp"
            android:textSize="15sp"
            android:text="Don't have an account?  "
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="6dp"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:text="Register"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    </LinearLayout>
    <!--
        <CheckBox
            android:id="@+id/checkBox"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_password"
            android:text="@string/remember_me" />
            -->
</LinearLayout>